--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-9 social">
-                        <a href="#"><span class="fa fa-twitter"></span></a>
+                        <a href="https://github.com/Xusanbek0071"><span class="fa fa-github"></span></a>
                         <a href="https://instagram.com/it_creative_channel"><span class="fa fa-instagram"></span></a>
                     </div>
                     <div class="col-3 search-top">
