--- a/templates/about.html
+++ b/templates/about.html
@@ -11,12 +11,31 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <h2 class="mb-4">Hi There! I'm Emre Kahriman</h2>
+                            <h2 class="mb-4">Salom Men Suyunov Husan Sayt ishlab chiquvchisi</h2>
                             <p class="mb-5"><img src="{% static 'images/img_6.jpg' %}" alt="Image placeholder" class="img-fluid"></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum minima eveniet recusandae suscipit eum laboriosam fugit amet deleniti iste et. Ad dolores, necessitatibus non saepe tenetur impedit commodi quibusdam natus repellat, exercitationem accusantium perferendis officiis. Laboriosam impedit quia minus pariatur!</p>
-                            <p>Dignissimos iste consectetur, nemo magnam nulla suscipit eius quibusdam, quo aperiam quia quae est explicabo nostrum ab aliquid vitae obcaecati tenetur beatae animi fugiat officia id ipsam sint? Obcaecati ea nisi fugit assumenda error totam molestiae saepe fugiat officiis quam?</p>
-                            <p>Culpa porro quod doloribus dolore sint. Distinctio facilis ullam voluptas nemo voluptatum saepe repudiandae adipisci officiis, explicabo eaque itaque sed necessitatibus, fuga, ea eius et aliquam dignissimos repellendus impedit pariatur voluptates. Dicta perferendis assumenda, nihil placeat, illum quibusdam. Vel, incidunt?</p>
-                            <p>Dolorum blanditiis illum quo quaerat, possimus praesentium perferendis! Quod autem optio nobis, placeat officiis dolorem praesentium odit. Vel, cum, a. Adipisci eligendi eaque laudantium dicta tenetur quod, pariatur sunt sed natus officia fuga accusamus reprehenderit ratione, provident possimus ut voluptatum.</p>
+                            <p>Hurmatli foydalanuvchi, bizning sayt orqali siz zamonaviy texnologiyalar dunyosiga sayohat qilasiz!</p>
+
+                            <p>Bizda siz topasiz:</p>
+                            
+                            <ul>
+                              <li>📱 Eng so'nggi gadjetlar, ularning imkoniyatlari va afzalliklari haqida batafsil sharhlar</li>
+                              
+                              <li>🤖 IT gigantlari yangiliklari - ularning innovatsion mahsulotlari haqida eng yangi ma'lumotlar</li>  
+                            
+                              <li>💻 Dasturlash sir-asrorlaridan lavhalar - dasturlash olamiga kirib borish uchun zarur bo'lgan bilimlar</li>
+                              
+                              <li>📈 Texnologiyalarning rivojlanishi statistikasi - son va grafikalar orqali ilmiy-texnik taraqqiyot tahlili</li>
+                              
+                              <li>🔬 Innovatsion kashfiyotlar va texnologiyalar haqidagi tanqidiy maqolalar</li>
+
+                              <li>🔬 O</li>
+                              
+                              <li>🤖 Sun'iy intellekt, robototexnika va ularga oid so'nggi yutuqlar haqida foydali maslahatlar</li>
+                            </ul>
+                            
+                            <p>Barcha maqolalar siz azizlar uchun o'zbek tilida taqdim etiladi.</p>
+                            
+                            <p>O'zingizni IT dunyosining taniqli sayyohi deb hisoblaydigan bo'lsangiz, saytimizga xush kelibsiz!</p>
                         </div>
                     </div>
                 </div>
