--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h2 class="mb-4">Salom Men Suyunov Husan Sayt ishlab chiquvchisi</h2>
-                            <p class="mb-5"><img src="{% static 'images/img_6.jpg' %}" alt="Image placeholder" class="img-fluid"></p>
+                            <p class="mb-5"><img src="{% static 'images/img_6.png' %}" alt="Image placeholder" class="img-fluid"></p>
                             <p>Hurmatli foydalanuvchi, bizning sayt orqali siz zamonaviy texnologiyalar dunyosiga sayohat qilasiz!</p>
 
                             <p>Bizda siz topasiz:</p>
@@ -28,7 +28,7 @@
                               
                               <li>🔬 Innovatsion kashfiyotlar va texnologiyalar haqidagi tanqidiy maqolalar</li>
 
-                              <li>🔬 O</li>
+                              <!-- <li>🔬 O</li> -->
                               
                               <li>🤖 Sun'iy intellekt, robototexnika va ularga oid so'nggi yutuqlar haqida foydali maslahatlar</li>
                             </ul>
