--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -47,7 +47,7 @@
                         <!-- <a href="#"><span class="fa fa-search"></span></a> -->
                         <form action="{% url 'posts:search' %}" method="GET" class="search-top-form">
                             <span class="icon fa fa-search"></span>
-                            <input type="text" name="query" id="s" placeholder="Qidirish uchun kalit so'zni kiriting...">
+                            <input type="text" name="query" id="s" placeholder="Qidiruv...">
                         </form>
                     </div>
                 </div>
