--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -25,7 +25,7 @@
     <!-- Theme Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <link rel="Site icon" type="image/png" href="{% static 'images/EK-NonCircle.png' %}"/>
+    <link rel="Site icon" type="image/png" href="{% static 'images/creative.jpg' %}"/>
 </head>
 <body>
 
