--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
                     </div>
                     {% if object.author != user %}
                     <div class="form-group mt-0 pt-0 d-flex justify-content-end">
-                        <a href="{{ object.file.url }}" download class="btn btn-primary flex-last" type="submit"><i class="fas fa-download"></i> Yuklab olish</a>
+                        <a href="{{ object.file.url }}" download class="btn btn-primary flex-last" type="submit"><i class="fas fa-download"></i> </a>
                     </div>
                     {% endif %}
                     <hr> {% if object.author == user %}
