--- a/staticfiles/css/bootstrap-grid.css
+++ b/staticfiles/css/bootstrap-grid.css
@@ -71,7 +71,8 @@ html {
   width: 100%;
   min-height: 1px;
   padding-right: 15px;
-  padding-left: 15px; }
+  padding-left: 15px;
+ }
 
 .col {
   -ms-flex-preferred-size: 0;
