--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,15 @@
 
 
 {% block content %}
+<style>
+    ul,li{
+        list-style-type: none;
+    }
+    a{
+        text-decoration: none;
+
+    }
+</style>
     <section class="site-section pt-5">
         <div class="container">
 
@@ -36,6 +45,14 @@
                             <p>Barcha maqolalar siz azizlar uchun o'zbek tilida taqdim etiladi.</p>
                             
                             <p>O'zingizni IT dunyosining taniqli sayyohi deb hisoblaydigan bo'lsangiz, saytimizga xush kelibsiz!</p>
+                            <br>
+                            <p>Dasturchi bilan bog'lanish uchun:</p>
+                            <ul>
+                                <li>📞 Tel: <a href="+998975216686">+998 97 521 66 86</a></li>
+                                <li>🌐 Git Hub: <a href="https://github.com/xusanbek0071">Git Hub hisobini ko'rish</a></li>
+                                <li>📱 Telegram: <a href="https://t.me/mBin_Dev_0071">Telegramdan kuzatish</a></li>
+
+                            </ul>
                         </div>
                     </div>
                 </div>
