--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -158,7 +158,7 @@
                 <div class="row ">
                     <div class="col-md-12 text-center ">
                         <h3>Biz haqimizda </h3>
-                        <p>Mijozning o'zi ko'p sa ksal sk sa bo'lishi kerak, u adipissing elitiga intiladi. Bularning ixtirochisi rad etadi. Bularning ixtirochisi rad etadi.<a href="{% url 'pages:about' %} "><u>Ko'proq o'qish</u></a> </p>
+                        <p>Ushbu sayt IT Texnalogiyalarga qiziquvchilarni yangiliklardan boxbar qilish uchun Suyunov Husan Shavkat o'g'li tomonidan ishlab chiqilgan. O'zingizni IT dunyosining taniqli sayyohi deb hisoblaydigan bo'lsangiz, saytimizga xush kelibsiz! <a href="{% url 'pages:about' %} "><u>Ko'proq o'qish</u></a> </p>
                     </div>
                 </div>
             </div>
