--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,13 @@
 
 
 {% block content %}
+<head>
+    <meta name="google-site-verification" content="yC_B9rzVP_5tC0mfkgfSpOBj6KYwxnJ-pZpPZ0VHNR8" />
+    <meta name="description" content="Blog sayt, News, IT Blog, IT Center, IT Center Zomin, IT Creative, Suyunov Husan, IT Yangilik, 
+    IT Maslahat, Dasturlash, Elektron kitoblar, Kutubxona, E-kutubxona, IT Center kutubxona, E-Books, ITC LMS, IT Center LMS">
+    <title>IT Creative Blog </title>
+    
+</head>
 <style>
     ul,li{
         list-style-type: none;
