--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -3,10 +3,15 @@
 
 
 <!doctype html>
-<html lang="en">
+<html lang="uz">
 
 <head>
+    <meta name="google-site-verification" content="yC_B9rzVP_5tC0mfkgfSpOBj6KYwxnJ-pZpPZ0VHNR8" />
+    <meta name="description" content="Blog sayt, News, IT Blog, IT Center, IT Center Zomin, IT Creative, Suyunov Husan, IT Yangilik, 
+    IT Maslahat, Dasturlash, Elektron kitoblar, Kutubxona, E-kutubxona, IT Center kutubxona, E-Books, ITC LMS, IT Center LMS">
     <title>IT Creative Blog </title>
+    
+</head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
