--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,6 +1,13 @@
 {% load static %}
 
 
+<head>
+    <meta name="google-site-verification" content="yC_B9rzVP_5tC0mfkgfSpOBj6KYwxnJ-pZpPZ0VHNR8" />
+    <meta name="description" content="Blog sayt, News, IT Blog, IT Center, IT Center Zomin, IT Creative, Suyunov Husan, IT Yangilik, 
+    IT Maslahat, Dasturlash, Elektron kitoblar, Kutubxona, E-kutubxona, IT Center kutubxona, E-Books, ITC LMS, IT Center LMS">
+    <title>IT Creative Blog </title>
+    
+</head>
 
 <div class="col-md-12 col-lg-4 sidebar">
 
