--- a/templates/about.html
+++ b/templates/about.html
@@ -59,9 +59,9 @@
                             <p>Dasturchi bilan bog'lanish uchun:</p>
                             <ul>
                                 <li>📞 Tel: <a href="+998975216686">+998 97 521 66 86</a></li>
-                                <li>🌐 Git Hub: <a href="https://github.com/xusanbek0071">Git Hub hisobini ko'rish</a></li>
-                                <li>📱 Telegram: <a href="https://t.me/mBin_Dev_0071">Telegramdan kuzatish</a></li>
-                                <li>📱 Instagram: <a href="https://www.instagram.com/husanbek_dev?igsh=MWlwcnAzMTJzaXk4aA%3D%3D&utm_source=qr">Instagramdan kuzatish</a></li>
+                                <li>🌐 Git Hub: <a href="https://github.com/xusanbek0039">Git Hub hisobini ko'rish</a></li>
+                                <li>📱 Telegram: <a href="https://t.me/mBin_Dev_0039">Telegramdan kuzatish</a></li>
+                                <li>📱 Instagram: <a href="https://www.instagram.com/husanbek_coder">Instagramdan kuzatish</a></li>
 
                             </ul>
                         </div>
