--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -49,11 +49,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-9 social">
-                            <a href="https://github.com/Xusanbek0071"><span class="fa fa-github"></span></a>
-                            <a href="https://t.me/it_creative_channel"><span class="fa fa-telegram"></span></a>
+                            <a href="https://github.com/Xusanbek0039"><span class="fa fa-github"></span></a>
+                            <a href="https://t.me/mBin_Dev_0039"><span class="fa fa-telegram"></span></a>
                             <a href="https://facebook.com/suyunov_husanbek"><span class="fa fa-facebook"></span></a>
                             <a href="https://twitter.com/suyunov_husan"><span class="fa fa-twitter"></span></a>
-                            <a href="https://instagram.com/husanbek_dev/"><span class="fa fa-instagram"></span></a>
+                            <a href="https://instagram.com/husanbek_coder/"><span class="fa fa-instagram"></span></a>
                         </div>
                         <div class="col-3 search-top">
                             <!-- <a href="#"><span class="fa fa-search"></span></a> -->
