Yangilanish amalga oshirildi naqulayliklar tuzatildi. Noaqulayliklar uchun uzur so'raymiz.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'partials/_base.html' %} {% load static %} {% block content %}
 <!-- SLIDER section -->
+ <head>
+    <meta name="description" content="Suyunov Husan tomonidan ishlab chiqilgan blog web sayt. Ushbu saytdan siz IT Texnalogiyalarga oid eng so'ngi xabarlarni o'qishingiz mumkin. Shu bilan birgalikda eng ko'p o'qiladigan elektron kitoblarni ham shu web sayt orqali yuklab olishingiz mumkin.">
+
+ </head>
 <section class="site-section pt-5 pb-5">
     <div class="container">
         <div class="row">
