--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -7,8 +7,7 @@
 
 <head>
     <meta name="google-site-verification" content="yC_B9rzVP_5tC0mfkgfSpOBj6KYwxnJ-pZpPZ0VHNR8" />
-    <meta name="description" content="Blog sayt, News, IT Blog, IT Center, IT Center Zomin, IT Creative, Suyunov Husan, IT Yangilik, 
-    IT Maslahat, Dasturlash, Elektron kitoblar, Kutubxona, E-kutubxona, IT Center kutubxona, E-Books, ITC LMS, IT Center LMS">
+    <meta name="description" content="Suyunov Husan tomonidan ishlab chiqilgan blog web sayt. Ushbu saytdan siz IT Texnalogiyalarga oid eng so'ngi xabarlarni o'qishingiz mumkin. Shu bilan birgalikda eng ko'p o'qiladigan elektron kitoblarni ham shu web sayt orqali yuklab olishingiz mumkin.">
     <title>IT Creative Blog </title>
     
 </head>
