--- a/templates/partials/mail_template.html
+++ b/templates/partials/mail_template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Suyunov Husan tomonidan ishlab chiqilgan blog web sayt. Ushbu saytdan siz IT Texnalogiyalarga oid eng so'ngi xabarlarni o'qishingiz mumkin. Shu bilan birgalikda eng ko'p o'qiladigan elektron kitoblarni ham shu web sayt orqali yuklab olishingiz mumkin.">
 
     <title>Hujjat</title>
 </head>
